# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: github-actions-demo.yml  linter-check.yml
brain_games/: .logic.py.swp  cli.py  engine.py  logic.py  logic.py.save
brain_games/games/: calculator.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: .brain_calc.py.swp  .brain_games.py.swp  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
